# qmesh3

./: README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: python-app.yml
qmesh-cli/: qmesh
qmesh3/: __init__.py  cli.py  config.py
qmesh3/lib/: exceptions.py
qmesh3/mesh/: mesh.py
qmesh3/publish/: publisher.py
qmesh3/raster/: meshMetricTools.py
qmesh3/vector/: primitiveShapes.py  shapefileTools.py
setuptools_qmesh/: __init__.py  dist.py
setuptools_qmesh/command/: __init__.py  check_gmsh.py  check_qgis.py  egg_info.py
tests/: conftest.py
tests/regression/test_NWEuropeanShelf/: test_NWEuropeanShelf.py
tests/regression/test_OrkneyShetlandIsles/: generate_loxodromes.py  test_OrkneyShetlandIsles.py
tests/regression/test_circularRegions/: test_circularRegions.py
tests/regression/test_halfGlobe/: test_halfGlobe.py
tests/regression/test_idealisedEstuary/: generate_idealisedEstuary.py
tests/regression/test_projections/: test_projections.py
tests/unit/test_mesh/: test_gmsh.py
tests/unit/test_raster/: test_raster.py
tests/unit/test_vector/: polygons.dbf  test_shapefileTools.py
